# diashowdl

./: DDL_specification.html  LICENSE  README.md  api.md  ddl-schema.json  sensor.md
api/csharp/: ApiDemo.csproj  Program.cs  README.md
api/dart/: README.md  pubspec.yaml
api/esp32/: README.md
api/esp32/buttons/: README.md  buttons.ino  secrets.h.example
api/esp32/grove_gesture/: README.md  grove_gesture.ino  secrets.h.example
api/go/: .gitignore  README.md  go.mod  main.go
api/java/: README.md  pom.xml
api/java/src/main/java/at/flutterdev/diashow/: ApiDemo.java
api/nodejs/: README.md  index.js  package-lock.json  package.json
api/python/: .gitignore  README.md  api_demo.py  api_hand_demo.py  api_voice_demo.py  diashow_cli.py  diashow_tools.py  requirements_hands.txt  requirements_voice.txt
diashows/: widget_demo.ddl.json
sensor/dart/: .gitignore  README.md  pubspec.yaml
sensor/esp32/: .gitignore  README.md  esp32.ino  generate_cert.sh  secrets.h.example
sensor/go/: .gitignore  README.md  go.mod  go.sum  main.go  sensor_linux.go  sensor_stub.go
sensor/python/: .gitignore  README.md  config.example.json  requirements.txt  sensor_node.py
sensor/rust/: .gitignore  Cargo.toml  README.md
sensor/rust/src/: main.rs
