[package]
name = "diashow-sensor-node"
version = "1.0.0"
edition = "2024"
description = "DiashowDL Sensor Node — Rust binary for Linux SBCs."

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"
hostname = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
embedded-hal = "0.2"
linux-embedded-hal = "0.3"
bme680 = "0.6"
